--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="/">Home</a>
+                <a class="nav-link " aria-current="page" href="/Bootstrap.github.io/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/about.html">About</a>
+                <a class="nav-link active" href="/Bootstrap.github.io/about.html">About</a>
               </li>
             </li>
             <li class="nav-item dropdown">
@@ -51,7 +51,7 @@
               </ul>
             </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact Us</a>
+                <a class="nav-link" href="/Bootstrap.github.io/contact.html">Contact Us</a>
               
               
             </ul>
