--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 <a class="nav-link " aria-current="page" href="/Bootstrap.github.io/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/Bootstrap.github.io/about.html">About</a>
+                <a class="nav-link " href="/Bootstrap.github.io/about.html">About</a>
               </li>
             </li>
             <li class="nav-item dropdown">
@@ -51,7 +51,7 @@
               </ul>
             </li>
               <li class="nav-item">
-                <a class="nav-link" href="/Bootstrap.github.io/contact.html">Contact Us</a>
+                <a class="nav-link active" href="/Bootstrap.github.io/contact.html">Contact Us</a>
               
               
             </ul>
