--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/Bootstrap.github.io/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About</a>
+                <a class="nav-link" href="/Bootstrap.github.io/about.html">About</a>
               </li>
             </li>
             <li class="nav-item dropdown">
@@ -52,7 +52,7 @@
               </ul>
             </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact Us</a>
+                <a class="nav-link" href="/Bootstrap.github.io/contact.html">Contact Us</a>
               
               
             </ul>
