--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
        <div class="row align-items-md-stretch  ">
          <div class="col-md-6 col-sm-6 col-md-6 col-lg-6  ">
           <div class="h-100 p-5  rounded-3">
-            <img src="./about1.jpg" alt="">
+            <img src="./about1.jpg" class="img-fluid" alt="">
            </div>
         </div>
         <div class="col-md-6 col-sm-12 col-lg-6 ">
@@ -92,7 +92,7 @@
          </div>
          <div class="col-md-6 col-sm-12 col-lg-6">
            <div class="h-100 p-5  rounded-3">
-            <img src="./about3.jpg" alt="">
+            <img src="./about3.jpg" class="img-fluid" alt="">
            </div>
          </div>
        </div>
@@ -100,7 +100,7 @@
         <div class="row align-items-md-stretch">
           <div class="col-md-6 col-sm-12  col-lg-6">
            <div class="h-100 p-5  rounded-3">
-             <img src="./about2.jpg" alt="">
+             <img src="./about2.jpg" class="img-fluid" alt="">
             </div>
          </div>
          <div class="col-md-6 col-sm-12  col-lg-6">
