--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./1.jpg" c3ass="d-block w-100 " alt="...">
+            <img src="./3.jpg" class="d-block w-100  img-fluid " alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h2>Welcome to  iCoders</h2>
               <p>some extra information about programmers</p>
